# triglav

./: ChangeLog  Doxyfile  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  libtool  libtriglav.pc.in
demo/: Makefile.am  Makefile.in  demo.cc  triglav_demo_window.cc
dox/: Makefile.am  Makefile.in  building_triglav_from_source.dox  creating_a_databank.dox  detecting_triglav_in_configure_ac.dox  downloading_triglav_tarball.dox  generating_cases.dox  generating_precalculated_knowledge.dox  precalculating.dox  using_precalculated_knowledge.dox  using_triglav.dox  using_triglav_as_a_library.dox  using_triglav_from_command_line.dox  using_triglav_in_cxx.dox  validating_cases.dox  writing_triglav_specification.dox
examples/: Makefile.am  Makefile.in  estimated_cases.txt  example1.triglav  example2.triglav  readme.xml  readme2.xml  readme3.xml  readme4.xml  readme5.xml  readme6.xml  readme7.xml  readme8.xml  step0_report.triglav  step1_save_databank.triglav  step2_estimate_cases.triglav  step3_generate_cases.triglav  step4_precalculate.triglav  step4_validate_cases.triglav
image/: Makefile.am  Makefile.in
inc/: Makefile.am  Makefile.in  triglav.h  triglav_demo.h
perl/: Makefile.am  Makefile.in  triglav_databank_distribute_workload.pl  triglav_databank_get_amount_of_case_files.pl  triglav_databank_get_amount_of_processors.pl  triglav_databank_get_case_files_path.pl  triglav_databank_get_case_files_prefix.pl  triglav_databank_get_max_amount_of_unusual_values.pl  triglav_databank_get_precalculated_files.pl  triglav_databank_get_validation_range.pl  triglav_databank_get_your_email.pl  triglav_databank_get_your_name.pl  triglav_databank_get_your_website.pl  triglav_databank_set_amount_of_case_files.pl  triglav_databank_set_amount_of_processors.pl  triglav_databank_set_case_files_path.pl  triglav_databank_set_case_files_prefix.pl  triglav_databank_set_max_amount_of_unusual_values.pl  triglav_databank_set_precalculated_files.pl  triglav_databank_set_validation_range.pl  triglav_databank_set_your_email.pl  triglav_databank_set_your_name.pl  triglav_databank_set_your_website.pl
src/: Makefile.am  Makefile.in  agent.cc  belief.cc  cases_parser.cc  command_consider.cc  command_estimate_cases.cc  command_expand.cc  command_generate_cases.cc  command_loop.cc  command_open_databank.cc  command_precalculate.cc  command_report.cc  command_save_databank.cc  command_validate_cases.cc  cpp_parser.cc  expression_value.cc  expression_variable_initial_value.cc  expression_variable_terminal_value.cc  generic_name_item_placeholder.cc  generic_name_item_token.cc  generic_name_list.cc  hidden_variable.cc  hidden_variable_instance.cc  input.cc  input_variable.cc  input_variable_instance.cc  logical_expression_and.cc  logical_expression_equality.cc  my_iterator.cc  my_iterator_for_estimating_variable_instances.cc  my_iterator_for_variable_instances.cc  my_output_multifile.cc  my_single_range_iterator_for_variable_instances.cc  output.cc  output_variable.cc  output_variable_instance.cc  parser.y  rule.cc  scanner.l  (+27 more)
